--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -2,7 +2,10 @@
 @import './visually-hidden';
 @import './container';
 @import './header';
-@import './hero';
+@import './locations';
+@import './maqolalar';
+@import './hotels';
+@import './footer';
 
 // sections
 @import './footer';
